--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth-ktx:21.0.7'
     implementation 'com.google.firebase:firebase-firestore-ktx:24.2.2'
     implementation 'com.google.firebase:firebase-storage-ktx:20.0.1'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.6.4'
 
     //Tests
     testImplementation 'junit:junit:4.13.2'
@@ -61,4 +62,7 @@ dependencies {
     //RxJava
     implementation "io.reactivex.rxjava2:rxjava:2.2.5"
     implementation "io.reactivex.rxjava2:rxandroid:2.1.0"
+
+    //Coroutines
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
 }
