--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,10 +15,10 @@
         android:theme="@style/LauncherTheme"
         tools:targetApi="31">
         <activity
-            android:name=".FilesDetailsActivity"
+            android:name=".ui.files.FileDetailsActivity"
             android:exported="false" />
         <activity
-            android:name=".FolderDetailsActivity"
+            android:name=".ui.folders.FolderDetailsActivity"
             android:exported="false" />
         <activity
             android:name=".ui.auth.LoginActivity"
